--- a/backend/package.json
+++ b/backend/package.json
@@ -7,10 +7,12 @@
     "dev": "nodemon"
   },
   "devDependencies": {
+    "@babel/plugin-transform-runtime": "^7.10.5",
     "express": "^4.17.1",
     "nodemon": "^2.0.4"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "uuidv4": "^6.1.1"
   }
 }
